[gd_scene load_steps=5 format=3 uid="uid://dels7wblonud1"]

[ext_resource type="Script" uid="uid://o676qjf0y8vj" path="res://scripts/game_ui.gd" id="1_rns2u"]
[ext_resource type="LabelSettings" uid="uid://pon5p7ap4ftk" path="res://resources/game_ui__basic_font__36_yellow.tres" id="1_yubou"]
[ext_resource type="Texture2D" uid="uid://bcegf7ip0taj2" path="res://assets/tileset.png" id="3_u001w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u2dgd"]
atlas = ExtResource("3_u001w")
region = Rect2(48, 32, 16, 16)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_rns2u")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="KeysContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer/KeysContainer"]
layout_mode = 2
text = "Keys: "
label_settings = ExtResource("1_yubou")

[node name="KeyValue" type="Label" parent="MarginContainer/VBoxContainer/KeysContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("1_yubou")

[node name="HeartsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Heart1" type="TextureRect" parent="MarginContainer/VBoxContainer/HeartsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_u2dgd")
expand_mode = 3
stretch_mode = 5

[node name="Heart2" type="TextureRect" parent="MarginContainer/VBoxContainer/HeartsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_u2dgd")
expand_mode = 3
stretch_mode = 5

[node name="Heart3" type="TextureRect" parent="MarginContainer/VBoxContainer/HeartsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_u2dgd")
expand_mode = 3
stretch_mode = 5
